fixign video jumping

--- a/src/components/background/background.css
+++ b/src/components/background/background.css
@@ -1,6 +1,9 @@
 #bg {
   object-fit: cover;
   width: 100vw;
+  --video-width: 426;
+  --video-height: 240;
+  aspect-ratio: calc(100vw) / calc(100vh);
   height: 100vh;
   position: fixed;
   top: 0;
@@ -21,4 +24,10 @@
   .shadow-overlay {
     background-color: rgba(0, 0, 0, 0.7);
   }
+}
+
+video[poster] {
+  height: 100vh;
+  width: 100vw;
+  object-fit: cover;
 }
